; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_objstr.c_mp_obj_str_get_str.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_objstr.c_mp_obj_str_get_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s = common dso_local global i64 0, align 8
@l = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mp_obj_str_get_str(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i64 @mp_obj_is_str_or_bytes(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %15

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = load i64, i64* @s, align 8
  %10 = load i32, i32* @l, align 4
  %11 = call i32 @GET_STR_DATA_LEN(i32 %8, i64 %9, i32 %10)
  %12 = load i32, i32* @l, align 4
  %13 = load i64, i64* @s, align 8
  %14 = inttoptr i64 %13 to i8*
  store i8* %14, i8** %2, align 8
  br label %18

15:                                               ; preds = %1
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @bad_implicit_conversion(i32 %16)
  br label %18

18:                                               ; preds = %7, %15
  %19 = load i8*, i8** %2, align 8
  ret i8* %19
}

declare dso_local i64 @mp_obj_is_str_or_bytes(i32) #1

declare dso_local i32 @GET_STR_DATA_LEN(i32, i64, i32) #1

declare dso_local i32 @bad_implicit_conversion(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
